include/lv00/proof.h


void proof_set_stream_context(StreamContext *ctx);
typedef struct Proposition Proposition;
typedef struct ProofStep ProofStep;
typedef struct ProofNavigator ProofNavigator;
typedef struct ProofDependency ProofDependency;
typedef struct BottomDefinition BottomDefinition;
typedef enum {
    PROOF_COLOR_GREEN,             
    PROOF_COLOR_BLUE_UNEXPLORED,   
    PROOF_COLOR_BLUE_RESOURCE,     
    PROOF_COLOR_BLUE_OUT_OF_RANGE, 
    PROOF_COLOR_GREEN_VERIFIED,    
    PROOF_COLOR_YELLOW,            
    PROOF_COLOR_ORANGE_ORACLE,     
    PROOF_COLOR_ORANGE_EX_FALSO,   
    PROOF_COLOR_AMBER,             
    PROOF_COLOR_DARK_ORANGE        
} ProofColor;
typedef enum {
    PROPOSITION_ATOMIC,      
    PROPOSITION_CONJUNCTION, 
    PROPOSITION_DISJUNCTION, 
    PROPOSITION_IMPLICATION, 
    PROPOSITION_NEGATION,    
    PROPOSITION_UNIVERSAL,   
    PROPOSITION_EXISTENTIAL, 
    PROPOSITION_BOTTOM       
} PropositionType;
struct Proposition {
    int id;               
    PropositionType type; 
    ProofColor color;     
    char *label;          
    int *input_port_ids;  
    int input_count;      
    int *output_port_ids; 
    int output_count;     
    ConstraintGraph *pattern; 
    int *precondition_region_ids; 
    int precondition_count;       
    int *postcondition_constraint_ids; 
    int postcondition_count;           
    Proposition **sub_props; 
    int sub_prop_count;      
    TypeRegion *prop_type; 
    char *name;        
    char *description; 
};
typedef enum {
    PROOF_STEP_ADD_NODE,       
    PROOF_STEP_ADD_CONSTRAINT, 
    PROOF_STEP_REWRITE,        
    PROOF_STEP_FUNCTION_APP,   
    PROOF_STEP_PACK_FUNCTION,  
    PROOF_STEP_NORMALIZATION,  
    PROOF_STEP_UNIFY,          
    PROOF_STEP_EX_FALSO,       
    PROOF_STEP_ORACLE          
} ProofStepType;
struct ProofStep {
    int id;             
    ProofStepType type; 
    ProofColor color;   
    int node_id;       
    int constraint_id; 
    int rule_id;       
    int func_block_id; 
    int *merged_node_ids; 
    int merged_count;     
    int retained_node_id; 
    int *dependency_step_ids; 
    int dependency_count;     
    int *dependent_step_ids;  
    int dependent_count;      
    bool is_breakpoint; 
    bool is_completed;  
    char *note;         
    int64_t timestamp; 
};
struct ProofDependency {
    int id;           
    ProofColor color; 
    enum {
        DEP_SOURCE_DIRECT,   
        DEP_SOURCE_LEMMA,    
        DEP_SOURCE_ORACLE,   
        DEP_SOURCE_EX_FALSO, 
        DEP_SOURCE_NUMERIC   
    } source;
    int lemma_id;       
    char *content_hash; 
    char *external_ref; 
    char *numeric_declaration;  
    double LV00_TOLERATED_FLOAT(precision_threshold); 
    ProofDependency **sub_deps; 
    int sub_dep_count;          
};
typedef enum {
    LEMMA_VIEW_EXPANDED, 
    LEMMA_VIEW_COLLAPSED 
} LemmaViewState;
struct ProofNavigator {
    ProofStep **steps; 
    int step_count;    
    int current_step;  
    Proposition *target_prop;      
    ConstraintGraph *construction; 
    ProofDependency *dep_tree; 
    bool is_complete;       
    ProofColor final_color; 
    int *breakpoint_indices; 
    int breakpoint_count;    
    PropositionEquivalence *equivalences; 
    int equivalence_count;                
    int equivalence_capacity;             
    BottomDefinition *bottom_def; 
    int *lemma_view_step_ids;          
    LemmaViewState *lemma_view_states; 
    int lemma_view_count;              
    int lemma_view_capacity;           
    LV00Engine *engine;
    char *strategy_note; 
};
bool proposition_set_input_ports(Proposition *prop, const int *port_ids, int count);
bool proposition_set_output_ports(Proposition *prop, const int *port_ids, int count);
bool proposition_set_pattern(Proposition *prop, ConstraintGraph *pattern);
bool proposition_set_preconditions(Proposition *prop, const int *region_ids, int count);
bool proposition_set_postconditions(Proposition *prop, const int *constraint_ids, int count);
bool proposition_add_sub_proposition(Proposition *parent, Proposition *child);
ProofStep *proof_step_create(ProofStepType type);
void proof_step_destroy(ProofStep *step);
bool proof_step_add_dependency(ProofStep *step, int dep_step_id);
void proof_step_set_breakpoint(ProofStep *step, bool is_breakpoint);
bool proof_navigator_add_step(ProofNavigator *nav, ProofStep *step);
bool proof_navigator_next_breakpoint(ProofNavigator *nav);
ProofStep *proof_navigator_current_step(ProofNavigator *nav);
ProofDependency *proof_dependency_create(ProofColor color);
void proof_dependency_destroy(ProofDependency *dep);
bool proof_dependency_add_sub(ProofDependency *parent, ProofDependency *child);
ProofColor proof_dependency_compute_color(ProofDependency *dep);
bool proof_interactive_step(ProofNavigator *nav, ProofStepType step_type, const void *step_data);
bool proof_save_breakpoint(ProofNavigator *nav, int breakpoint_id);
bool proof_restore_breakpoint(ProofNavigator *nav, int breakpoint_id);
bool proof_export_coq(ProofNavigator *nav, const char *filepath);
typedef enum {
    PROOF_NL_LANG_ZH_CN, 
    PROOF_NL_LANG_EN_US  
} ProofNaturalLanguage;
char *proof_step_get_natural_language(const ProofStep *step, ProofNaturalLanguage lang);
bool proof_export_natural_language(ProofNavigator *nav, const char *filepath, ProofNaturalLanguage lang);
bool proof_navigator_set_strategy_note(ProofNavigator *nav, const char *strategy_note);
const char *proof_navigator_get_strategy_note(const ProofNavigator *nav);
bool proof_step_set_note(ProofStep *step, const char *note);
void proof_declare_proposition_equivalence(ProofNavigator *nav, int prop_a_id, int prop_b_id);
int proof_find_equivalent_proposition(const ProofNavigator *nav, int prop_id, int *equivalent_ids, int max_count);
typedef struct {
    int dependency_id;
    ProofColor old_color;
    ProofColor new_color;
    bool hash_changed;
} DependencyUpdateResult;
int proof_validate_dependencies(ProofNavigator *nav, DependencyUpdateResult *results, int max_results);
typedef struct BottomDefinition {
    bool has_input_ports; 
    int input_port_count;
    bool allow_explosion; 
} BottomDefinition;
void proof_set_bottom_definition(ProofNavigator *nav, const BottomDefinition *def);
const BottomDefinition *proof_get_bottom_definition(const ProofNavigator *nav);
void proof_set_lemma_view_state(ProofNavigator *nav, int step_id, LemmaViewState state);
LemmaViewState proof_get_lemma_view_state(const ProofNavigator *nav, int step_id);
const char *proof_color_to_string(ProofColor color);
const char *proposition_type_to_string(PropositionType type);
const char *proof_step_type_to_string(ProofStepType type);
const char *unify_result_to_string(UnifyStatus result);
bool proof_has_type_variables(const Proposition *prop);
Proposition *proof_instantiate_proposition(const Proposition *prop, const int *type_var_to_concrete, int mapping_count);
typedef enum {
    UNCONSTRUCT_PROVED,         
    UNCONSTRUCT_NOT_PROVED,     
    UNCONSTRUCT_MAYBE_POSSIBLE, 
    UNCONSTRUCT_ERROR           
} UnconstructResult;
typedef struct {
    UnconstructResult result;    
    const char *matched_problem; 
    const char *matched_theory;  
    const char *proof_strategy;  
    char *detailed_report;       
    int reduction_steps;         
} UnconstructInfo;
UnconstructResult proof_check_unconstructibility(ProofNavigator *nav, const ConstraintGraph *graph,
                                                 const Proposition *prop, UnconstructInfo *info);
UnconstructResult proof_attempt_unconstructibility(ProofNavigator *nav, const ConstraintGraph *graph,
                                                   const Proposition *prop, UnconstructInfo *info);
void unconstruct_info_destroy(UnconstructInfo *info);
typedef enum {
    BACKTRACK_CHOICE_POINT, 
    BACKTRACK_FAILURE,      
    BACKTRACK_SUCCESS,      
    BACKTRACK_PRUNE         
} BacktrackNodeType;
typedef struct BacktrackNode {
    int id;                  
    BacktrackNodeType type;  
    int step_index;          
    char *label;             
    char *strategy_name;     
    bool is_backtrack_point; 
    struct BacktrackNode *parent;    
    struct BacktrackNode **children; 
    int child_count;                 
    int child_capacity;              
    bool explored;    
    ProofColor color; 
} BacktrackNode;
typedef struct {
    BacktrackNode *root;       
    BacktrackNode **all_nodes; 
    int node_count;            
    int node_capacity;         
    int success_paths;   
    int failure_paths;   
    int backtrack_count; 
    int pruned_branches; 
    int max_depth;       
    char *current_strategy;      
    char **available_strategies; 
    int strategy_count;          
} ProofSearchTree;
ProofSearchTree *proof_search_tree_create(void);
void proof_search_tree_destroy(ProofSearchTree *tree);
BacktrackNode *backtrack_node_create(BacktrackNodeType type, const char *label);
bool proof_search_tree_add_child(ProofSearchTree *tree, BacktrackNode *parent, BacktrackNode *child);
void backtrack_node_mark_backtrack(BacktrackNode *node, const char *strategy_name);
void proof_search_tree_register_strategy(ProofSearchTree *tree, const char *strategy_name);
void proof_search_tree_set_strategy(ProofSearchTree *tree, const char *strategy_name);
bool proof_search_tree_export_json(const ProofSearchTree *tree, const char *filepath);
bool proof_search_tree_export_dot(const ProofSearchTree *tree, const char *filepath);
typedef enum {
    PROOF_STRATEGY_DIRECT_CONSTRUCTION, 
    PROOF_STRATEGY_AREA_METHOD,         
    PROOF_STRATEGY_GROEBNER_BASIS,      
    PROOF_STRATEGY_VECTOR_METHOD,       
    PROOF_STRATEGY_FULL_ANGLE_METHOD,   
    PROOF_STRATEGY_DEDUCTIVE_DATABASE,  
    PROOF_STRATEGY_COORDINATE,          
    PROOF_STRATEGY_ORACLE,              
    PROOF_STRATEGY_COUNT                
} ProofStrategyType;
struct ProofMultiStrategy;
typedef enum {
    PROOF_STRATEGY_AVAILABLE,   
    PROOF_STRATEGY_UNAVAILABLE, 
    PROOF_STRATEGY_ACTIVE,      
    PROOF_STRATEGY_COMPLETED,   
    PROOF_STRATEGY_FAILED       
} ProofStrategyStatus;
typedef struct ProofStrategyDescriptor {
    ProofStrategyType type;         
    ProofStrategyStatus status;     
    char *name;                     
    char *description;              
    char **required_axiom_packages; 
    int axiom_package_count;        
    bool (*applicability_check)(
                                const struct ProofMultiStrategy *mse, const ConstraintGraph *graph,
                                const Proposition *prop);
    bool (*execute)(
                    struct ProofMultiStrategy *mse, ProofNavigator *nav);
    int generated_step_count; 
    int *generated_step_ids;  
} ProofStrategyDescriptor;
typedef struct ProofMultiStrategy {
    ProofStrategyDescriptor strategies[PROOF_STRATEGY_COUNT]; 
    int active_strategy_index;                                
    ProofNavigator *shared_navigator;                         
    bool enable_fallback; 
    int *fallback_order;  
    int fallback_count;   
    int total_attempts;           
    int success_count;            
    int64_t *strategy_timings_ms; 
} ProofMultiStrategy;
ProofMultiStrategy *proof_multi_strategy_create(ProofNavigator *nav);
void proof_multi_strategy_destroy(ProofMultiStrategy *mse);
bool proof_multi_strategy_register(ProofMultiStrategy *mse, const ProofStrategyDescriptor *descriptor);
bool proof_multi_strategy_activate(ProofMultiStrategy *mse, ProofStrategyType strategy_type);
const ProofStrategyDescriptor *proof_multi_strategy_get_active(const ProofMultiStrategy *mse);
int proof_multi_strategy_evaluate_applicability(ProofMultiStrategy *mse, const ConstraintGraph *graph,
                                                const Proposition *prop, ProofStrategyType *out_applicable_types,
                                                int max_count);
bool proof_multi_strategy_execute(ProofMultiStrategy *mse);
ProofStrategyType proof_multi_strategy_try_all(ProofMultiStrategy *mse);
bool proof_multi_strategy_pipeline(ProofMultiStrategy *mse, const ProofStrategyType *pipeline, int pipeline_count);
void proof_multi_strategy_set_fallback_order(ProofMultiStrategy *mse, const int *fallback_order, int count);
bool proof_multi_strategy_switch(ProofMultiStrategy *mse, ProofStrategyType strategy_type);
void proof_multi_strategy_get_stats(const ProofMultiStrategy *mse, int *out_total_attempts, int *out_success_count);
const char *proof_strategy_type_to_string(ProofStrategyType type);
const char *proof_strategy_status_to_string(ProofStrategyStatus status);
typedef struct ConstraintSolver ConstraintSolver;
typedef struct FillSuggestion {
    FillKind kind;
    char *label;        
    char *code_snippet; 
    int arity;          
    struct FillSuggestion *next;
} FillSuggestion;
FillSuggestion *proof_guided_fill(ConstraintSolver *solver, const char *goal_type, int goal_dim);
void fill_suggestions_destroy(FillSuggestion *list);
typedef enum { PROOF_QTT_ERASED = 0, PROOF_QTT_LINEAR = 1, PROOF_QTT_UNRESTRICTED = 2 } ProofQuantifier;
bool proof_mark_ghost(int step_id, ProofQuantifier quant);