module/python/lv/_ctypes_binding.py


_lib.type_get_node_type.argtypes = [c_void_p, c_int]
_lib.type_get_node_type.restype = c_void_p

_lib.type_detach_node_type.argtypes = [c_void_p, c_int]
_lib.type_detach_node_type.restype = c_bool

# 依赖类型检查
_lib.type_check_dependent.argtypes = [c_void_p, c_void_p, c_void_p, c_void_p]
_lib.type_check_dependent.restype = c_bool

# 辅助函数
_lib.type_kind_to_string.argtypes = [c_int]
_lib.type_kind_to_string.restype = c_char_p

_lib.universe_level_to_string.argtypes = [c_int]
_lib.universe_level_to_string.restype = c_char_p

_lib.type_equiv_result_to_string.argtypes = [c_int]
_lib.type_equiv_result_to_string.restype = c_char_p

_lib.type_check_result_to_string.argtypes = [c_int]
_lib.type_check_result_to_string.restype = c_char_p

_lib.type_print.argtypes = [c_void_p, c_int]
_lib.type_print.restype = None

# 规则表驱动的类型推断
_lib.type_system_register_inference_rule.argtypes = [c_void_p, c_int, c_int, c_int, c_char_p]
_lib.type_system_register_inference_rule.restype = c_int

_lib.type_system_get_inference_rules.argtypes = [c_void_p, POINTER(c_int)]
_lib.type_system_get_inference_rules.restype = c_void_p

_lib.type_system_clear_inference_rules.argtypes = [c_void_p]
_lib.type_system_clear_inference_rules.restype = None

_lib.type_infer_by_rules.argtypes = [c_void_p, POINTER(_ConstraintGraph), c_int]
_lib.type_infer_by_rules.restype = c_int

# 重写路径
_lib.type_rewrite_path_create.argtypes = []
_lib.type_rewrite_path_create.restype = c_void_p

_lib.type_rewrite_path_destroy.argtypes = [c_void_p]
_lib.type_rewrite_path_destroy.restype = None

_lib.type_rewrite_path_record.argtypes = [c_void_p, c_char_p, c_void_p, c_void_p]
_lib.type_rewrite_path_record.restype = None

_lib.type_rewrite_path_replay.argtypes = [c_void_p, c_int]
_lib.type_rewrite_path_replay.restype = c_bool

_lib.type_system_get_rewrite_path.argtypes = [c_void_p]
_lib.type_system_get_rewrite_path.restype = c_void_p

# 路径探索器
_lib.path_explorer_create.argtypes = [c_void_p, c_void_p, c_void_p]
_lib.path_explorer_create.restype = c_void_p

_lib.path_explorer_destroy.argtypes = [c_void_p]
_lib.path_explorer_destroy.restype = None

_lib.path_explorer_get_applicable_rules.argtypes = [c_void_p, POINTER(POINTER(c_int)), POINTER(c_int)]
_lib.path_explorer_get_applicable_rules.restype = c_int

_lib.path_explorer_preview_rule.argtypes = [c_void_p, c_int, POINTER(c_void_p)]
_lib.path_explorer_preview_rule.restype = c_int

_lib.path_explorer_apply_rule.argtypes = [c_void_p, c_int]
_lib.path_explorer_apply_rule.restype = c_int

_lib.path_explorer_undo.argtypes = [c_void_p]
_lib.path_explorer_undo.restype = c_int

_lib.path_explorer_check_goal.argtypes = [c_void_p, POINTER(c_bool)]
_lib.path_explorer_check_goal.restype = c_int

_lib.path_explorer_save_path.argtypes = [c_void_p, POINTER(c_void_p)]
_lib.path_explorer_save_path.restype = c_int

_lib.path_explorer_get_step_count.argtypes = [c_void_p]
_lib.path_explorer_get_step_count.restype = c_int

_lib.path_explorer_get_steps.argtypes = [c_void_p]
_lib.path_explorer_get_steps.restype = c_void_p

_lib.path_explorer_get_current.argtypes = [c_void_p]
_lib.path_explorer_get_current.restype = c_void_p

# ============================================================
# 证明搜索树与多策略引擎函数签名
# ============================================================
# 证明系统的回溯搜索树可视化与多证明方法并存引擎

# 证明搜索树
_lib.proof_search_tree_create.argtypes = []
_lib.proof_search_tree_create.restype = c_void_p

_lib.proof_search_tree_destroy.argtypes = [c_void_p]
_lib.proof_search_tree_destroy.restype = None

_lib.backtrack_node_create.argtypes = [c_int, c_char_p]
_lib.backtrack_node_create.restype = c_void_p

_lib.proof_search_tree_add_child.argtypes = [c_void_p, c_void_p, c_void_p]
_lib.proof_search_tree_add_child.restype = c_bool

_lib.backtrack_node_mark_backtrack.argtypes = [c_void_p, c_char_p]
_lib.backtrack_node_mark_backtrack.restype = None

_lib.proof_search_tree_register_strategy.argtypes = [c_void_p, c_char_p]
_lib.proof_search_tree_register_strategy.restype = None

_lib.proof_search_tree_set_strategy.argtypes = [c_void_p, c_char_p]
_lib.proof_search_tree_set_strategy.restype = None

_lib.proof_search_tree_export_json.argtypes = [c_void_p, c_char_p]
_lib.proof_search_tree_export_json.restype = c_bool

_lib.proof_search_tree_export_dot.argtypes = [c_void_p, c_char_p]
_lib.proof_search_tree_export_dot.restype = c_bool

# 多策略引擎
_lib.proof_multi_strategy_create.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_multi_strategy_create.restype = c_void_p

_lib.proof_multi_strategy_destroy.argtypes = [c_void_p]
_lib.proof_multi_strategy_destroy.restype = None

_lib.proof_multi_strategy_register.argtypes = [c_void_p, c_void_p]
_lib.proof_multi_strategy_register.restype = c_bool

_lib.proof_multi_strategy_activate.argtypes = [c_void_p, c_int]
_lib.proof_multi_strategy_activate.restype = c_bool

_lib.proof_multi_strategy_get_active.argtypes = [c_void_p]
_lib.proof_multi_strategy_get_active.restype = c_void_p

_lib.proof_multi_strategy_evaluate_applicability.argtypes = [c_void_p, POINTER(_ConstraintGraph), POINTER(_Proposition), POINTER(c_int), c_int]
_lib.proof_multi_strategy_evaluate_applicability.restype = c_int

_lib.proof_multi_strategy_execute.argtypes = [c_void_p]
_lib.proof_multi_strategy_execute.restype = c_bool

_lib.proof_multi_strategy_try_all.argtypes = [c_void_p]
_lib.proof_multi_strategy_try_all.restype = c_int

_lib.proof_multi_strategy_pipeline.argtypes = [c_void_p, POINTER(c_int), c_int]
_lib.proof_multi_strategy_pipeline.restype = c_bool

_lib.proof_multi_strategy_set_fallback_order.argtypes = [c_void_p, POINTER(c_int), c_int]
_lib.proof_multi_strategy_set_fallback_order.restype = None

_lib.proof_multi_strategy_switch.argtypes = [c_void_p, c_int]
_lib.proof_multi_strategy_switch.restype = c_bool

_lib.proof_multi_strategy_get_stats.argtypes = [c_void_p, POINTER(c_int), POINTER(c_int)]
_lib.proof_multi_strategy_get_stats.restype = None

_lib.proof_strategy_type_to_string.argtypes = [c_int]
_lib.proof_strategy_type_to_string.restype = c_char_p

_lib.proof_strategy_status_to_string.argtypes = [c_int]
_lib.proof_strategy_status_to_string.restype = c_char_p

# 证明步骤管理（额外API）
_lib.proof_navigator_add_step.argtypes = [POINTER(_ProofNavigator), c_void_p]
_lib.proof_navigator_add_step.restype = c_bool

_lib.proof_navigator_current_step.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_current_step.restype = c_void_p

_lib.proof_navigator_next_breakpoint.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_next_breakpoint.restype = c_bool

_lib.proof_navigator_set_strategy_note.argtypes = [POINTER(_ProofNavigator), c_char_p]
_lib.proof_navigator_set_strategy_note.restype = c_bool

_lib.proof_navigator_get_strategy_note.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_navigator_get_strategy_note.restype = c_char_p

_lib.proof_step_create.argtypes = [c_int]
_lib.proof_step_create.restype = c_void_p

_lib.proof_step_destroy.argtypes = [c_void_p]
_lib.proof_step_destroy.restype = None

_lib.proof_step_add_dependency.argtypes = [c_void_p, c_int]
_lib.proof_step_add_dependency.restype = c_bool

_lib.proof_step_set_breakpoint.argtypes = [c_void_p, c_bool]
_lib.proof_step_set_breakpoint.restype = None

_lib.proof_step_set_note.argtypes = [c_void_p, c_char_p]
_lib.proof_step_set_note.restype = c_bool

_lib.proof_step_get_natural_language.argtypes = [c_void_p, c_int]
_lib.proof_step_get_natural_language.restype = c_char_p

# 证明依赖
_lib.proof_dependency_create.argtypes = [c_int]
_lib.proof_dependency_create.restype = c_void_p

_lib.proof_dependency_destroy.argtypes = [c_void_p]
_lib.proof_dependency_destroy.restype = None

_lib.proof_dependency_add_sub.argtypes = [c_void_p, c_void_p]
_lib.proof_dependency_add_sub.restype = c_bool

_lib.proof_dependency_compute_color.argtypes = [c_void_p]
_lib.proof_dependency_compute_color.restype = c_int

# 证明导出
_lib.proof_export_coq.argtypes = [POINTER(_ProofNavigator), c_char_p]
_lib.proof_export_coq.restype = c_bool

_lib.proof_export_natural_language.argtypes = [POINTER(_ProofNavigator), c_char_p, c_int]
_lib.proof_export_natural_language.restype = c_bool

# 交互式证明
_lib.proof_interactive_step.argtypes = [POINTER(_ProofNavigator), c_int, c_void_p]
_lib.proof_interactive_step.restype = c_bool

_lib.proof_save_breakpoint.argtypes = [POINTER(_ProofNavigator), c_int]
_lib.proof_save_breakpoint.restype = c_bool

_lib.proof_restore_breakpoint.argtypes = [POINTER(_ProofNavigator), c_int]
_lib.proof_restore_breakpoint.restype = c_bool

# 命题等价
_lib.proof_declare_proposition_equivalence.argtypes = [POINTER(_ProofNavigator), c_int, c_int]
_lib.proof_declare_proposition_equivalence.restype = None

_lib.proof_find_equivalent_proposition.argtypes = [POINTER(_ProofNavigator), c_int, POINTER(c_int), c_int]
_lib.proof_find_equivalent_proposition.restype = c_int

# 依赖验证
_lib.proof_validate_dependencies.argtypes = [POINTER(_ProofNavigator), c_void_p, c_int]
_lib.proof_validate_dependencies.restype = c_int

# 矛盾定义
_lib.proof_set_bottom_definition.argtypes = [POINTER(_ProofNavigator), c_void_p]
_lib.proof_set_bottom_definition.restype = None

_lib.proof_get_bottom_definition.argtypes = [POINTER(_ProofNavigator)]
_lib.proof_get_bottom_definition.restype = c_void_p

# 引理折叠
_lib.proof_set_lemma_view_state.argtypes = [POINTER(_ProofNavigator), c_int, c_int]
_lib.proof_set_lemma_view_state.restype = None

_lib.proof_get_lemma_view_state.argtypes = [POINTER(_ProofNavigator), c_int]
_lib.proof_get_lemma_view_state.restype = c_int

# 命题实例化
_lib.proof_has_type_variables.argtypes = [POINTER(_Proposition)]
_lib.proof_has_type_variables.restype = c_bool

_lib.proof_instantiate_proposition.argtypes = [POINTER(_Proposition), POINTER(c_int), c_int]
_lib.proof_instantiate_proposition.restype = POINTER(_Proposition)

# 不可构造性证明
_lib.proof_check_unconstructibility.argtypes = [POINTER(_ProofNavigator), POINTER(_ConstraintGraph), POINTER(_Proposition), c_void_p]
_lib.proof_check_unconstructibility.restype = c_int

_lib.proof_attempt_unconstructibility.argtypes = [POINTER(_ProofNavigator), POINTER(_ConstraintGraph), POINTER(_Proposition), c_void_p]
_lib.proof_attempt_unconstructibility.restype = c_int

_lib.unconstruct_info_destroy.argtypes = [c_void_p]
_lib.unconstruct_info_destroy.restype = None

# 命题管理（额外API）
_lib.proposition_set_input_ports.argtypes = [POINTER(_Proposition), POINTER(c_int), c_int]
_lib.proposition_set_input_ports.restype = c_bool

_lib.proposition_set_output_ports.argtypes = [POINTER(_Proposition), POINTER(c_int), c_int]
_lib.proposition_set_output_ports.restype = c_bool

_lib.proposition_set_pattern.argtypes = [POINTER(_Proposition), POINTER(_ConstraintGraph)]
_lib.proposition_set_pattern.restype = c_bool

_lib.proposition_set_preconditions.argtypes = [POINTER(_Proposition), POINTER(c_int), c_int]
_lib.proposition_set_preconditions.restype = c_bool

_lib.proposition_set_postconditions.argtypes = [POINTER(_Proposition), POINTER(c_int), c_int]
_lib.proposition_set_postconditions.restype = c_bool

_lib.proposition_add_sub_proposition.argtypes = [POINTER(_Proposition), POINTER(_Proposition)]
_lib.proposition_add_sub_proposition.restype = c_bool

# 辅助函数
_lib.proof_color_to_string.argtypes = [c_int]
_lib.proof_color_to_string.restype = c_char_p

_lib.proposition_type_to_string.argtypes = [c_int]
_lib.proposition_type_to_string.restype = c_char_p

_lib.proof_step_type_to_string.argtypes = [c_int]
_lib.proof_step_type_to_string.restype = c_char_p

_lib.unify_result_to_string.argtypes = [c_int]
_lib.unify_result_to_string.restype = c_char_p

# 证明流式上下文
_lib.proof_set_stream_context.argtypes = [c_void_p]
_lib.proof_set_stream_context.restype = None

# Agda/Idris2/Isabelle/F* 借鉴API
_lib.proof_guided_fill.argtypes = [c_void_p, c_char_p, c_int]
_lib.proof_guided_fill.restype = c_void_p

_lib.fill_suggestions_destroy.argtypes = [c_void_p]
_lib.fill_suggestions_destroy.restype = None

_lib.proof_mark_ghost.argtypes = [c_int, c_int]
_lib.proof_mark_ghost.restype = c_bool
